--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,34 @@
 {
-  "HOME": {
-    "TITLE": "Welcome",
-    "DESC": "This is a translated page."
+  "HEADER": {
+    "HOMES": "Homes",
+    "EXPERIENCES": "Experiences",
+    "SERVICES": "Services",
+    "SWITCH_TO_HOSTING": "Switch to hosting",
+    "SIGN_UP": "Sign up",
+    "LOGIN": "Log in",
+    "DARK_MODE": "Dark Mode",
+    "LIGHT_MODE": "Light Mode",
+    "LANGUAGE": "Language",
+    "ENGLISH": "English",
+    "ARABIC": "Arabic",
+    "AIRBNB_YOUR_HOME": "Home",
+    "HELP": "Help",
+    "WHERE": "Where",
+    "ANYWHERE": "Anywhere",
+    "SEARCH_DESTINATIONS": "Search destinations",
+    "DATE": "Date",
+    "ADD_DATE": "Add Date",
+    "ADD_DATES": "Add dates",
+    "WHO": "Who",
+    "ADD_GUESTS": "Add Guests",
+    "TODAY": "Today",
+    "TOMORROW": "Tomorrow",
+    "THIS_WEEKEND": "This weekend",
+    "SUGGESTED_DESTINATIONS": "Suggested destinations",
+    "FLEXIBLE_SEARCH": "Flexible search",
+    "GUEST": "guest",
+    "GUESTS": "guests",
+    "INFANT": "infant",
+    "INFANTS": "infants"
   }
 }
