--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -37,6 +37,22 @@
     "notYou": "ليس انت؟",
     "goToRegister": "استخدم حساب اخر",
     "email": "البريد الإلكتروني",
-    "password": "كلمة المرور"
+    "password": "كلمة المرور",
+    "showPass": "عرض",
+    "login": "تسجيل الدخول"
+  },
+  "register": {
+    "welcome": "مرحبًا بك في Airbnb",
+    "email": "البريد الإلكتروني",
+    "password": "كلمة المرور",
+    "showPass": "عرض",
+    "register": "تسجيل الدخول",
+    "hi": "تسجيل الدخول أو الاشتراك"
+  },
+  "confirmOtp": {
+    "welcome": "مدة صلاحية رمز التعريف الفريد 1 دقيقة",
+    "confirmOtp": "تأكيد رمز التعريف الفريد",
+    "confirm": "تأكيد",
+    "resendOtp": "إعادة إرسال رمز التعريف الفريد"
   }
 }
