--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -54,5 +54,14 @@
     "confirmOtp": "تأكيد رمز التعريف الفريد",
     "confirm": "تأكيد",
     "resendOtp": "إعادة إرسال رمز التعريف الفريد"
+  },
+  "resetPassword":{
+    "welcome": "لقد تم ارسال رمز إعادة تعيين كلمة المرور إلى بريدك الإلكتروني مدة صلاحية الرمز دقيقة واحدة",
+    "resetYourPassword": "إعادة تعيين كلمة المرور",
+    "email": "البريد الإلكتروني",
+    "password": "كلمة المرور",
+    "showPass": "عرض",
+    "confirm": "تأكيد",
+    "confirmReset": "تأكيد إعادة تعيين كلمة المرور"
   }
 }
