--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -54,5 +54,14 @@
     "confirmOtp": "Confirm OTP",
     "confirm": "Confirm",
     "resendOtp": "Resend OTP"
+  },
+  "resetPassword": {
+    "welcome": "You have been sent a reset password email with a one-time code for your password reset valid for 1 minute",
+    "resetYourPassword": "Reset Password",
+    "email": "Email",
+    "password": "Password",
+    "showPass": "Show",
+    "confirm": "Confirm",
+    "confirmReset": "Confirm Reset Password"
   }
 }
