--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -64,5 +64,19 @@
     "showPass": "Show",
     "confirm": "Confirm",
     "confirmReset": "Confirm Reset Password"
+  },
+  "profile": {
+    "title": "Profile",
+    "firstName": "First Name",
+    "lastName": "Last Name",
+    "phoneNumber": "Phone Number",
+    "country": "Country",
+    "birthDate": "Birth Date",
+    "bio": "Bio",
+    "submit": "Submit",
+    "aboutMe": "About Me",
+    "travels": "Travels",
+    "edit": "Edit",
+    "yourReviews": "Your Reviews"
   }
 }
