--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -78,7 +78,11 @@
     "aboutMe": "About Me",
     "travels": "Travels",
     "edit": "Edit",
-    "yourReviews": "Your Reviews"
+    "yourReviews": "Your Reviews",
+    "uploadImage": "Upload Image",
+    "previewImage": "Preview Image",
+    "upload": "Upload",
+    "cancel": "Cancel"
   },
   "notifications": {
     "title": "Notifications",
