--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -4,6 +4,7 @@
     "EXPERIENCES": "التجارب",
     "SERVICES": "الخدمات",
     "SWITCH_TO_HOSTING": "التبديل إلى الاستضافة",
+    "SWITCH_TO_TRAVELLER": "التبديل إلى المسافر",
     "SIGN_UP": "إنشاء حساب",
     "LOGIN": "تسجيل الدخول",
     "DARK_MODE": "الوضع الداكن",
