--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,6 +4,7 @@
     "EXPERIENCES": "Experiences",
     "SERVICES": "Services",
     "SWITCH_TO_HOSTING": "Switch to hosting",
+    "SWITCH_TO_TRAVELLER": "Switch to traveler",
     "SIGN_UP": "Sign up",
     "LOGIN": "Log in",
     "DARK_MODE": "Dark Mode",
