--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -32,7 +32,14 @@
     "INFANT": "infant",
     "INFANTS": "infants",
     "LOGOUT": "Logout",
-    "notifications": "Notifications"
+    "notifications": "Notifications",
+    "NAV": {
+      "TODAY": "Today",
+      "CALENDAR": "Calendar",
+      "LISTINGS": "Listings",
+      "MESSAGES": "Messages",
+      "WALLET": "Payments"
+    }
   },
   "login": {
     "welcome": "Welcome back",
@@ -214,7 +221,7 @@
     "ACTIONS": {
       "CLOSE": "Close",
       "APPLY": "Apply",
-       "VIEW": "View"
+      "VIEW": "View"
     },
     "ERRORS": {
       "USER_NOT_AUTHENTICATED": "User not authenticated.",
@@ -223,7 +230,6 @@
     "SELECT_PROPERTY": "Select Property"
   },
   "AVAILABILITY": {
-  "LOADING": "Loading calendar data..."
-}
-
+    "LOADING": "Loading calendar data..."
+  }
 }
