--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -39,7 +39,9 @@
       "LISTINGS": "المنشآت",
       "MESSAGES": "الرسائل",
       "WALLET": "المدفوعات"
-    }
+    },
+    "PROFILE": "الملف الشخصي",
+    "WISHLISTS": "قوائم المفضلة"
   },
   "login": {
     "welcome": "مرحبًا بك مجددا",
@@ -182,6 +184,20 @@
     "PLACEHOLDER": {
       "TITLE": "مرحبًا بك في الرسائل",
       "SUBTITLE": "ستظهر محادثاتك هنا"
+    },
+    "TITLE": "مساعد السفر",
+    "STATUS": "جاهز للمساعدة",
+    "PLACEHOLDER_bot": "اسأل عن أماكن الإقامة أو السفر...",
+    "CLEAR": "مسح المحادثة",
+    "CLOSE": "إغلاق",
+    "QUICK_HELP": "مساعدة سريعة بخصوص:",
+    "welcome": "مرحباً! 👋 أنا مساعدك في السفر. اسألني عن الحجوزات أو الأسعار أو التوافر أو أي شيء آخر.",
+    "cleared": "تم مسح المحادثة! كيف يمكنني مساعدتك في خطط السفر الخاصة بك؟ 🏠✈️",
+    "error": "عذراً، حدث خطأ ما. يرجى المحاولة لاحقاً.",
+    "quick": {
+      "find_place": "🏠 ابحث عن مكان",
+      "check_availability": "📅 تحقق من التوافر",
+      "pricing": "💰 معلومات التسعير"
     }
   },
   "SETTINGS": {
@@ -231,5 +247,37 @@
   },
   "AVAILABILITY": {
     "LOADING": "جاري تحميل بيانات التقويم..."
+  },
+  "COMMON": {
+    "COMING_SOON": "قريباً"
+  },
+  "PROPERTIES": {
+    "OVER_HOMES": "أكثر من {{count}} منزل",
+    "PRICES_INCLUDE_FEES": "الأسعار تشمل جميع الرسوم",
+    "PAGINATION": {
+      "PREV": "السابق",
+      "NEXT": "التالي"
+    }
+  },
+  "HOME": {
+    "SECTIONS": {
+      "POPULAR_CAIRO": "منازل مشهورة في القاهرة",
+      "HURGHADA_NEXT_WEEKEND": "متاح في الغردقة نهاية الأسبوع القادمة",
+      "STAY_NEW_CAIRO": "إقامة في القاهرة الجديدة",
+      "DUBAI_NEXT_MONTH": "متاح الشهر القادم في دبي",
+      "AIN_SOKHNA": "منازل في العين السخنة",
+      "ALEX_NEXT_WEEKEND": "متاح في الإسكندرية نهاية الأسبوع القادمة",
+      "PARIS": "أماكن للإقامة في باريس",
+      "MILAN": "اطلع على منازل في ميلان",
+      "SHEIKH_ZAYED": "منازل مشهورة في الشيخ زايد",
+      "BARCELONA": "إقامة في برشلونة"
+    },
+    "TOAST": {
+      "LOGIN_REQUIRED": "يرجى تسجيل الدخول لإضافة العقار للمفضلة.",
+      "REMOVED": "تم إزالة العقار من المفضلة",
+      "REMOVE_FAILED": "لم نتمكن من إزالة العقار",
+      "ADDED": "تمت إضافة العقار إلى المفضلة",
+      "ADD_FAILED": "لم نتمكن من إضافة العقار"
+    }
   }
 }
