--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -277,7 +277,9 @@
       "REMOVED": "تم إزالة العقار من المفضلة",
       "REMOVE_FAILED": "لم نتمكن من إزالة العقار",
       "ADDED": "تمت إضافة العقار إلى المفضلة",
-      "ADD_FAILED": "لم نتمكن من إضافة العقار"
+      "ADD_FAILED": "لم نتمكن من إضافة العقار",
+      "NEED_TO_CREATE_LISTING": "قم بإنشاء عقار أولاً لفتح الكالندر",
+      "OK": "حسناً"
     }
   }
 }
