--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -59,7 +59,7 @@
     "password": "كلمة المرور",
     "showPass": "عرض",
     "register": "تسجيل الدخول",
-    "hi": "تسجيل الدخول أو الاشتراك"
+    "hi": "الاشتراك"
   },
   "confirmOtp": {
     "welcome": "مدة صلاحية رمز التعريف الفريد 1 دقيقة",
